@@ -44,6 +44,7 @@
 - SF patch #1490980  Fix for SF bugs #1456311, #1221954  Communities and Collections without name
 - included some missing i18n tags
 - SF patch #1490891  Submission Step 1 not authorized note and navigation back
+- SF patch #1556316  for SF bugs #1552807, #1333269 and general deletion of Collection
 
 (Richard Jones)
 - SF bug #1515075. minor build file fix to copy correct config file
